import { screen } from "@testing-library/react";
import { renderTheme } from "../../styles/render-theme";
import { GridContent } from '.';
import mock from './mock';

describe('<GridContent />', () => {
  it('should render', () => {
    const {container} = renderTheme(<GridContent {...mock} />);
    expect(container).toMatchSnapshot();
  });

  it('should render background true', () => {
    delete mock.background;
    const {container} = renderTheme(<GridContent {...mock} />);
    expect(container).toMatchSnapshot();
  });
});
