// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridContent /> should render 1`] = `
.c0 {
  background: #fff;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
}

.c2 {
  color: #0a1128;
  font-size: 24px;
  text-transform: none;
  min-width: 200px;
}

.c2 > a img {
  margin: 0 auto;
}

.c4 {
  font-size: 16px;
}

.c1 {
  max-width: 580px;
  margin: 0 auto;
  text-align: center;
}

.c1 h1 {
  background: none;
}

.c3 {
  margin: 20px 0;
}

@media (max-width:768px) {
  .c2 {
    font-size: 16px;
  }
}

@media (max-width:768px) {
  .c2 {
    margin: 15px 0;
  }
}

<div>
  <div
    class="c0"
    id="id-6318-526720494937"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        Título
      </h1>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          HTML Ipsum Presents

  
          <p>
            <strong>
              Pellentesque habitant morbi tristique
            </strong>
             senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. 
            <em>
              Aenean ultricies mi vitae est.
            </em>
             Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
            <code>
              commodo vitae
            </code>
            , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. 
            <a
              href="#"
            >
              Donec non enim
            </a>
             in turpis pulvinar facilisis. Ut felis.
          </p>
          

  
          <h2>
            Header Level 2
          </h2>
          

  
          <ol>
            
     
            <li>
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </li>
            
     
            <li>
              Aliquam tincidunt mauris eu risus.
            </li>
            
  
          </ol>
          

  
          <blockquote>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
            </p>
          </blockquote>
          

  
          <h3>
            Header Level 3
          </h3>
          

  
          <ul>
            
     
            <li>
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </li>
            
     
            <li>
              Aliquam tincidunt mauris eu risus.
            </li>
            
  
          </ul>
          

  
          <pre>
            <code>
              
  #header h1 a {
    display: block;
    width: 300px;
    height: 80px;
  }
  
            </code>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridContent /> should render background true 1`] = `
.c0 {
  background: #fff;
  color: #0a1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
}

.c2 {
  color: #0a1128;
  font-size: 24px;
  text-transform: none;
  min-width: 200px;
}

.c2 > a img {
  margin: 0 auto;
}

.c4 {
  font-size: 16px;
}

.c1 {
  max-width: 580px;
  margin: 0 auto;
  text-align: center;
}

.c1 h1 {
  background: none;
}

.c3 {
  margin: 20px 0;
}

@media (max-width:768px) {
  .c2 {
    font-size: 16px;
  }
}

@media (max-width:768px) {
  .c2 {
    margin: 15px 0;
  }
}

<div>
  <div
    class="c0"
    id="id-5835-266420385153"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        Título
      </h1>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          HTML Ipsum Presents

  
          <p>
            <strong>
              Pellentesque habitant morbi tristique
            </strong>
             senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. 
            <em>
              Aenean ultricies mi vitae est.
            </em>
             Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
            <code>
              commodo vitae
            </code>
            , ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. 
            <a
              href="#"
            >
              Donec non enim
            </a>
             in turpis pulvinar facilisis. Ut felis.
          </p>
          

  
          <h2>
            Header Level 2
          </h2>
          

  
          <ol>
            
     
            <li>
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </li>
            
     
            <li>
              Aliquam tincidunt mauris eu risus.
            </li>
            
  
          </ol>
          

  
          <blockquote>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.
            </p>
          </blockquote>
          

  
          <h3>
            Header Level 3
          </h3>
          

  
          <ul>
            
     
            <li>
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </li>
            
     
            <li>
              Aliquam tincidunt mauris eu risus.
            </li>
            
  
          </ul>
          

  
          <pre>
            <code>
              
  #header h1 a {
    display: block;
    width: 300px;
    height: 80px;
  }
  
            </code>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
